--- a/pages/cambiar-contrasena.html
+++ b/pages/cambiar-contrasena.html
@@ -1,121 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Mechapp · Cambiar contraseña</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Actualiza la contraseña de tu cuenta de Mechapp de forma segura." />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="../Styles/auth.css" />
-        <link rel="stylesheet" href="../Styles/chatbot.css" />
-    </head>
-    <body>
-        <main>
-            <section class="auth-card" aria-labelledby="update-password-title">
-                <div class="brand" aria-label="Mechapp">
-                    <a class="brand-link" href="./paginainicio.html">
-                        <div class="brand-icon" aria-hidden="true"></div>
-                        <span>Mechapp</span>
-                    </a>
-                    <a class="back-home" href="./perfil.html">Volver al perfil</a>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Mechapp · Cambiar contraseña</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Actualiza la contraseña de tu cuenta de Mechapp de forma segura." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../Styles/auth.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
+</head>
+
+<body>
+    <main>
+        <section class="auth-card" aria-labelledby="update-password-title">
+            <div class="brand" aria-label="Mechapp">
+                <a class="brand-link" href="./paginainicio.html">
+                    <img src="../assets/logo-oscuro.png" alt="Logo Mechapp" width="90" height="90">
+
+                    <span>Mechapp</span>
+                </a>
+                <a class="back-home" href="./perfil.html">Volver al perfil</a>
+            </div>
+
+            <header class="auth-header">
+                <h1 id="update-password-title">Actualiza tu contraseña</h1>
+                <p>Elige una contraseña segura para proteger tu cuenta.</p>
+            </header>
+
+            <form data-update-form data-update-type="password">
+                <div class="field">
+                    <label for="current-password">Contraseña actual</label>
+                    <div class="password-input">
+                        <input type="password" id="current-password" name="currentPassword"
+                            placeholder="Contraseña actual" autocomplete="current-password" required
+                            data-password-input />
+                        <button type="button" class="password-toggle-button" aria-label="Mostrar contraseña"
+                            aria-pressed="false" data-password-toggle>
+                            <span class="password-toggle-icon" aria-hidden="true"></span>
+                        </button>
+                    </div>
                 </div>
 
-                <header class="auth-header">
-                    <h1 id="update-password-title">Actualiza tu contraseña</h1>
-                    <p>Elige una contraseña segura para proteger tu cuenta.</p>
-                </header>
-
-                <form data-update-form data-update-type="password">
-                    <div class="field">
-                        <label for="current-password">Contraseña actual</label>
-                        <div class="password-input">
-                            <input
-                                type="password"
-                                id="current-password"
-                                name="currentPassword"
-                                placeholder="Contraseña actual"
-                                autocomplete="current-password"
-                                required
-                                data-password-input
-                            />
-                            <button
-                                type="button"
-                                class="password-toggle-button"
-                                aria-label="Mostrar contraseña"
-                                aria-pressed="false"
-                                data-password-toggle
-                            >
-                                <span class="password-toggle-icon" aria-hidden="true"></span>
-                            </button>
-                        </div>
+                <div class="field">
+                    <label for="new-password">Nueva contraseña</label>
+                    <div class="password-input">
+                        <input type="password" id="new-password" name="newPassword" placeholder="Nueva contraseña"
+                            autocomplete="new-password" required data-password-input />
+                        <button type="button" class="password-toggle-button" aria-label="Mostrar contraseña"
+                            aria-pressed="false" data-password-toggle>
+                            <span class="password-toggle-icon" aria-hidden="true"></span>
+                        </button>
                     </div>
+                    <ul class="password-rules">
+                        <li>Al menos 8 caracteres.</li>
+                        <li>Combina letras, números y símbolos para mayor seguridad.</li>
+                    </ul>
+                </div>
 
-                    <div class="field">
-                        <label for="new-password">Nueva contraseña</label>
-                        <div class="password-input">
-                            <input
-                                type="password"
-                                id="new-password"
-                                name="newPassword"
-                                placeholder="Nueva contraseña"
-                                autocomplete="new-password"
-                                required
-                                data-password-input
-                            />
-                            <button
-                                type="button"
-                                class="password-toggle-button"
-                                aria-label="Mostrar contraseña"
-                                aria-pressed="false"
-                                data-password-toggle
-                            >
-                                <span class="password-toggle-icon" aria-hidden="true"></span>
-                            </button>
-                        </div>
-                        <ul class="password-rules">
-                            <li>Al menos 8 caracteres.</li>
-                            <li>Combina letras, números y símbolos para mayor seguridad.</li>
-                        </ul>
+                <div class="field">
+                    <label for="confirm-password">Confirmar nueva contraseña</label>
+                    <div class="password-input">
+                        <input type="password" id="confirm-password" name="confirmPassword"
+                            placeholder="Repite la nueva contraseña" autocomplete="new-password" required
+                            data-password-input />
+                        <button type="button" class="password-toggle-button" aria-label="Mostrar contraseña"
+                            aria-pressed="false" data-password-toggle>
+                            <span class="password-toggle-icon" aria-hidden="true"></span>
+                        </button>
                     </div>
+                </div>
 
-                    <div class="field">
-                        <label for="confirm-password">Confirmar nueva contraseña</label>
-                        <div class="password-input">
-                            <input
-                                type="password"
-                                id="confirm-password"
-                                name="confirmPassword"
-                                placeholder="Repite la nueva contraseña"
-                                autocomplete="new-password"
-                                required
-                                data-password-input
-                            />
-                            <button
-                                type="button"
-                                class="password-toggle-button"
-                                aria-label="Mostrar contraseña"
-                                aria-pressed="false"
-                                data-password-toggle
-                            >
-                                <span class="password-toggle-icon" aria-hidden="true"></span>
-                            </button>
-                        </div>
-                    </div>
+                <button type="submit" class="button">Guardar cambios</button>
+                <p class="form-feedback info" data-feedback aria-live="polite" hidden></p>
+            </form>
+        </section>
+    </main>
 
-                    <button type="submit" class="button">Guardar cambios</button>
-                    <p class="form-feedback info" data-feedback aria-live="polite" hidden></p>
-                </form>
-            </section>
-        </main>
+    <script src="../src/chatbot.js" defer></script>
+    <script src="../src/password-visibility.js" defer></script>
+    <script src="../src/profile-update.js" defer></script>
+</body>
 
-        <script src="../src/chatbot.js" defer></script>
-        <script src="../src/password-visibility.js" defer></script>
-        <script src="../src/profile-update.js" defer></script>
-    </body>
 </html>
