--- a/pages/recuperar-contrasena.html
+++ b/pages/recuperar-contrasena.html
@@ -22,7 +22,7 @@
     <main>
       <section class="auth-card" aria-labelledby="recovery-title">
         <div class="brand" aria-label="AutoServ">
-          <div class="brand-icon" aria-hidden="true"></div>
+          <img src="../assets/logo-oscuro.png" alt="Logo Mechapp" width="90" height="90">
           <span>Mechapp</span>
         </div>
 
