Add favicon link to all HTML pages

--- a/pages/editar-nombre.html
+++ b/pages/editar-nombre.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Mechapp · Cambiar nombre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <meta name="description" content="Actualiza el nombre que se muestra en tu perfil de Mechapp." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
