--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Servicio automotriz profesional." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <link rel="icon" type="image/png" href="/assets/logo.png" />
+
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
