--- a/pages/registro-taller.html
+++ b/pages/registro-taller.html
@@ -6,6 +6,8 @@
         <title>Mechapp · Registrar Taller</title>
         <meta name="description" content="Formulario para registrar talleres mecánicos en Mechapp." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="icon" type="image/png" href="/assets/logo.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
