--- a/pages/resenas-taller.html
+++ b/pages/resenas-taller.html
@@ -9,6 +9,8 @@
       content="Consulta todas las reseñas publicadas por clientes para un taller específico registrado en Mechapp."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
