--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -9,6 +9,8 @@
     content="Programa una visita presencial o a domicilio con un mecánico verificado de Mechapp." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <link rel="icon" type="image/png" href="/assets/logo.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
