--- a/pages/cambiar-contrasena.html
+++ b/pages/cambiar-contrasena.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Mechapp · Cambiar contraseña</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <meta name="description" content="Actualiza la contraseña de tu cuenta de Mechapp de forma segura." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
