--- a/pages/confirmacion.html
+++ b/pages/confirmacion.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Mechapp · Confirmación de pago</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet" />
