--- a/pages/editar-correo.html
+++ b/pages/editar-correo.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Mechapp · Cambiar correo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <meta name="description" content="Actualiza el correo electrónico asociado a tu cuenta de Mechapp." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
