--- a/pages/perfil-taller.html
+++ b/pages/perfil-taller.html
@@ -9,6 +9,8 @@
       content="Consulta la información de los talleres mecánicos registrados en Mechapp y agenda tus servicios."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
