--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -7,6 +7,8 @@
     <title>Mechapp · Perfil de Usuario</title>
     <meta name="description" content="Consulta los datos de tu cuenta y el historial de talleres visitados." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
