--- a/pages/recuperar-contrasena.html
+++ b/pages/recuperar-contrasena.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>MechApp · Recuperar contraseña</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <meta
       name="description"
       content="Recupera el acceso a tu cuenta de AutoServ solicitando un enlace de restablecimiento de contraseña."
