--- a/pages/redactar-resena.html
+++ b/pages/redactar-resena.html
@@ -6,6 +6,8 @@
     <title>Mechapp · Redactar reseña</title>
     <meta name="description" content="Comparte tu experiencia con los talleres certificados de Mechapp." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
