--- a/pages/registro.html
+++ b/pages/registro.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>AutoServ · Crear Cuenta</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="icon" type="image/png" href="/assets/logo.png" />
         <meta name="description" content="Regístrate para aprovechar los servicios de AutoServ." />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
