--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -9,6 +9,8 @@
       content="Conoce la misión, visión y valores del equipo detrás de Mechapp."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
