--- a/pages/solicitud.html
+++ b/pages/solicitud.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Mechapp · Detalle de solicitud</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="icon" type="image/png" href="/assets/logo.png" />
         <meta
             name="description"
             content="Revisa toda la información de la solicitud del cliente y decide si la aceptas o rechazas."
