Agregar botón para volver en detalle de solicitud

--- a/pages/solicitud.html
+++ b/pages/solicitud.html
@@ -21,6 +21,9 @@
     </head>
     <body>
         <main class="request-page">
+            <nav class="request-page__toolbar" aria-label="Navegación de la solicitud">
+                <button type="button" class="button ghost" data-action="go-back">Volver</button>
+            </nav>
             <section class="request-detail" data-request-container hidden>
                 <header class="request-detail__header">
                     <span class="request-detail__label">Solicitud del cliente</span>
