--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -282,7 +282,7 @@
             class="history"
             id="historial"
             aria-labelledby="historial-title"
-            data-visible-for="cliente"
+            data-visible-for="cliente mecanico"
         >
             <div class="section-header">
                 <div>
@@ -292,7 +292,7 @@
             </div>
             <div class="history-list" data-client-history></div>
             <p class="empty-state" data-client-history-empty hidden>
-                Aún no tienes visitas registradas. Agenda una cita para ver tu historial.
+                Aún no hay visitas registradas en el historial.
             </p>
         </section>
 
