Revert "Merge pull request #119 from Victor-prog-ctrl/codex/add-delete-button-for-workshop-history"
This reverts commit 40d18560250754a50559a5d78d21085726619900, reversing
changes made to 8b1c1c88042d5883dfcc02de805f9a4b25d7bb3f.

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -282,7 +282,7 @@
             class="history"
             id="historial"
             aria-labelledby="historial-title"
-            data-visible-for="cliente mecanico"
+            data-visible-for="cliente"
         >
             <div class="section-header">
                 <div>
@@ -292,7 +292,7 @@
             </div>
             <div class="history-list" data-client-history></div>
             <p class="empty-state" data-client-history-empty hidden>
-                Aún no hay visitas registradas en el historial.
+                Aún no tienes visitas registradas. Agenda una cita para ver tu historial.
             </p>
         </section>
 
