Actualizar titular del buscador en inicio

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -58,7 +58,7 @@
     <section class="search-section" aria-labelledby="buscador">
       <div class="section-header">
         <div>
-          <h2 id="buscador">Encuentra tu taller o servicio</h2>
+          <h2 id="buscador">Encuentra tu taller de confianza</h2>
           <p>Escribe el nombre de un taller para ver sus detalles y reseñas.</p>
         </div>
       </div>
