--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -39,6 +39,37 @@
       </a>
     </nav>
     <div class="header-actions">
+      <div class="notification-center" data-auth-visibility="authenticated" data-notification-center hidden>
+        <button
+          type="button"
+          class="notification-bell"
+          aria-label="Abrir notificaciones"
+          aria-expanded="false"
+          aria-haspopup="true"
+          data-notification-toggle
+        >
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false" class="notification-bell__icon">
+            <path
+              d="M12 2a6 6 0 0 0-6 6v3.382l-.894 2.236A1 1 0 0 0 6.03 15h11.94a1 1 0 0 0 .924-1.382L18 11.382V8a6 6 0 0 0-6-6Z"
+            />
+            <path d="M9 18a3 3 0 0 0 6 0H9Z" />
+          </svg>
+          <span class="notification-count" data-notification-count hidden>0</span>
+        </button>
+        <div class="notification-panel" data-notification-panel hidden role="region" aria-live="polite">
+          <div class="notification-panel__header">
+            <div>
+              <p class="notification-panel__label">Centro de notificaciones</p>
+              <p class="notification-panel__title">Tus avisos</p>
+            </div>
+            <button type="button" class="notification-panel__close" aria-label="Cerrar" data-notification-close>
+              &times;
+            </button>
+          </div>
+          <ul class="notification-list" data-notification-list aria-label="Notificaciones"></ul>
+          <p class="notification-empty" data-notification-empty hidden>No tienes notificaciones nuevas.</p>
+        </div>
+      </div>
       <a href="./login.html" class="button button-primary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
       <a href="./perfil.html" class="button ghost" data-auth-visibility="authenticated" hidden>Mi Perfil</a>
     </div>
@@ -254,11 +285,14 @@
           visibilityState.isAuthenticated = true;
           visibilityState.isMechanic = profile?.accountType === "mecanico";
           applyVisibilityState();
+          const role = visibilityState.isMechanic ? "mecanico" : "cliente";
+          setNotifications(ROLE_NOTIFICATIONS[role] ?? []);
         } catch (e) {
           console.error(e);
           visibilityState.isAuthenticated = false;
           visibilityState.isMechanic = false;
           applyVisibilityState();
+          clearNotifications();
         }
       };
       verifyMechanicProfile();
@@ -269,9 +303,192 @@
       const SEARCH_ERROR_MESSAGE = '<p class="empty-results">No se pudieron cargar los talleres. Intenta nuevamente más tarde.</p>';
       const SEARCH_EMPTY_MESSAGE = '<p class="empty-results">No encontramos talleres que coincidan con tu búsqueda.</p>';
 
+      const notificationCenter = document.querySelector('[data-notification-center]');
+      const notificationPanel = document.querySelector('[data-notification-panel]');
+      const notificationToggle = document.querySelector('[data-notification-toggle]');
+      const notificationList = document.querySelector('[data-notification-list]');
+      const notificationEmpty = document.querySelector('[data-notification-empty]');
+      const notificationCount = document.querySelector('[data-notification-count]');
+      const notificationCloseButton = document.querySelector('[data-notification-close]');
+
       let workshops = [];
       let workshopsReady = false;
       let workshopsLoadError = false;
+      let notifications = [];
+
+      const ROLE_NOTIFICATIONS = {
+        cliente: [
+          {
+            id: "client-registration",
+            message: "¡Tu registro en Mechapp se completó correctamente!",
+            type: "success",
+          },
+          {
+            id: "client-request-sent",
+            message: "Tu solicitud al taller fue enviada con éxito. En breve te contactarán.",
+            type: "info",
+          },
+          {
+            id: "client-appointment-accepted",
+            message: "El taller Ruta 5 aceptó tu cita del 25 de junio.",
+            type: "success",
+          },
+          {
+            id: "client-appointment-rejected",
+            message: "El taller Ciudad Motor no puede atender tu cita del 28 de junio.",
+            type: "warning",
+          },
+        ],
+        mecanico: [
+          {
+            id: "mechanic-registration",
+            message: "Tu taller se registró correctamente en Mechapp.",
+            type: "success",
+          },
+          {
+            id: "mechanic-requests",
+            message: "Tienes nuevas solicitudes esperando confirmación.",
+            type: "info",
+            action: {
+              label: "Ir a solicitudes",
+              href: "./perfil.html#solicitudes",
+            },
+          },
+          {
+            id: "mechanic-review",
+            message: "Un cliente acaba de escribir una reseña sobre tu servicio.",
+            type: "info",
+            action: {
+              label: "Ver reseñas",
+              href: "./resenas-taller.html",
+            },
+          },
+        ],
+      };
+
+      const renderNotifications = () => {
+        if (!notificationList || !notificationEmpty || !notificationCount) {
+          return;
+        }
+
+        notificationList.innerHTML = "";
+
+        if (!notifications.length) {
+          notificationEmpty.removeAttribute("hidden");
+          notificationCount.setAttribute("hidden", "");
+          notificationCount.textContent = "0";
+          return;
+        }
+
+        notificationEmpty.setAttribute("hidden", "");
+        notificationCount.textContent = notifications.length.toString();
+        notificationCount.removeAttribute("hidden");
+
+        const fragment = document.createDocumentFragment();
+        notifications.forEach((item) => {
+          const entry = document.createElement("li");
+          entry.className = `notification-item notification-item--${item.type ?? "info"}`;
+
+          const content = document.createElement("div");
+          content.className = "notification-item__content";
+
+          const text = document.createElement("p");
+          text.textContent = item.message;
+          content.appendChild(text);
+
+          if (item.action?.href && item.action?.label) {
+            const actionLink = document.createElement("a");
+            actionLink.href = item.action.href;
+            actionLink.textContent = item.action.label;
+            actionLink.className = "notification-item__action";
+            content.appendChild(actionLink);
+          }
+
+          entry.appendChild(content);
+
+          const closeButton = document.createElement("button");
+          closeButton.type = "button";
+          closeButton.className = "notification-item__dismiss";
+          closeButton.setAttribute("aria-label", "Descartar notificación");
+          closeButton.dataset.notificationId = item.id;
+          closeButton.textContent = "×";
+          entry.appendChild(closeButton);
+
+          fragment.appendChild(entry);
+        });
+
+        notificationList.appendChild(fragment);
+      };
+
+      const setNotifications = (items = []) => {
+        notifications = Array.isArray(items) ? [...items] : [];
+        renderNotifications();
+      };
+
+      const closeNotificationPanel = () => {
+        if (!notificationPanel || !notificationToggle) {
+          return;
+        }
+        notificationPanel.setAttribute("hidden", "");
+        notificationToggle.setAttribute("aria-expanded", "false");
+      };
+
+      const openNotificationPanel = () => {
+        if (!notificationPanel || !notificationToggle) {
+          return;
+        }
+        notificationPanel.removeAttribute("hidden");
+        notificationToggle.setAttribute("aria-expanded", "true");
+      };
+
+      const toggleNotificationPanel = () => {
+        if (!notificationPanel || !notificationToggle) {
+          return;
+        }
+        const isHidden = notificationPanel.hasAttribute("hidden");
+        if (isHidden) {
+          openNotificationPanel();
+        } else {
+          closeNotificationPanel();
+        }
+      };
+
+      const clearNotifications = () => {
+        notifications = [];
+        renderNotifications();
+        closeNotificationPanel();
+      };
+
+      notificationToggle?.addEventListener("click", () => {
+        toggleNotificationPanel();
+      });
+
+      notificationCloseButton?.addEventListener("click", () => {
+        closeNotificationPanel();
+      });
+
+      notificationList?.addEventListener("click", (event) => {
+        const button = event.target.closest("[data-notification-id]");
+        if (!button) {
+          return;
+        }
+        const { notificationId } = button.dataset;
+        if (!notificationId) {
+          return;
+        }
+        notifications = notifications.filter((item) => item.id !== notificationId);
+        renderNotifications();
+      });
+
+      document.addEventListener("click", (event) => {
+        if (!notificationCenter || !notificationPanel || notificationPanel.hasAttribute("hidden")) {
+          return;
+        }
+        if (notificationCenter.contains(event.target)) {
+          return;
+        }
+        closeNotificationPanel();
+      });
 
       function createWorkshopResult(workshop) {
         const article = document.createElement("article");
