--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -24,7 +24,7 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
+      <img src="../assets/logo-oscuro.png" alt="Mechapp" class="brand-logo" />
       <span class="brand-name">Mechapp</span>
     </div>
     <nav class="main-nav" aria-label="Principal">
