--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -17,10 +17,6 @@
 
   <link rel="stylesheet" href="../Styles/agendar-cita.css" />
   <link rel="stylesheet" href="../Styles/chatbot.css" />
-
-  <!-- ✅ SDK PayPal (USD). Deja UNA sola etiqueta -->
-  <script
-    src="https://www.paypal.com/sdk/js?client-id=ATK6vMKNkGN9nrBunM83FLJ8_6rR82v28x35yp7YpKHyajQORbwHoAhjpzmZyy9SDpUGQqf4taf0uNhg&currency=USD&intent=capture&components=buttons"></script>
 </head>
 
 <body>
@@ -136,22 +132,15 @@
         </form>
       </section>
 
-      <aside class="info-card" aria-label="Pago de reserva">
-        <!-- Caja de pago -->
-        <div class="pay-box" id="paypal-box">
-          <h4>Pago de reserva <span class="badge-soft">PayPal</span></h4>
-          <div class="pay-row">
-            <div>
-              <div style="font-size:13px;color:#444;">Servicio seleccionado</div>
-              <strong id="pay-service-name">—</strong>
-            </div>
-            <div class="pay-amount" id="pay-amount">—</div>
-          </div>
-          <div class="pay-hint">El cobro se realiza para confirmar tu cita. Si el mecánico rechaza, se reversa.</div>
-          <div class="pay-error" id="pay-error">Completa el formulario (servicio, mecánico, fecha y dirección) para
-            continuar.</div>
-          <div id="paypal-button-container"></div>
-        </div>
+      <aside class="info-card" aria-label="Información de la reserva">
+        <h4>Confirmación de cita</h4>
+        <p>
+          Una vez envíes tu solicitud, el mecánico revisará los datos y recibirás la confirmación en el centro de
+          notificaciones.
+        </p>
+        <p>
+          El pago de abono se realizará en un paso posterior, desde la notificación correspondiente.
+        </p>
       </aside>
     </div> <!-- /.layout -->
   </main>
@@ -159,173 +148,6 @@
   <!-- Scripts propios -->
   <script src="../src/chatbot.js" defer></script>
   <script src="../src/appointments.js" defer></script>
-
-  <!-- ✅ Inicialización única PayPal -->
-  <script>
-    (function () {
-      if (window.__MECHAPP_PAYPAL_INIT__) return;
-      window.__MECHAPP_PAYPAL_INIT__ = true;
-
-      // --- DOM helpers ---
-      const $ = s => document.querySelector(s);
-      const serviceInput = $('#service');
-      const mechanicSelect = $('#mechanic-select');
-
-      // FECHA/HORA
-      const visitDateInput = $('#visit-date');       // hidden del calendario (puede venir vacío)
-      const scheduledFor = $('#scheduled-for');    // <-- lo rellena appointments.js (ISO)
-      const visitTimeInput = $('#visit-time');
-
-      // LUGAR
-      const visitTypeRadios = document.querySelectorAll('input[name="visit-type"]');
-      const workshopDetail = $('#workshop-detail');
-      const domicileAddress = $('#domicile-address');
-
-      // UI resumen
-      const payServiceName = $('#pay-service-name');
-      const payAmountEl = $('#pay-amount');
-      const payErrorEl = $('#pay-error');
-
-      // --- Mapeo precios (USD) ---
-      const PRICE = [
-        { re: /diagn(o|ó)stico el(é|e)ctrico/i, usd: 20 },
-        { re: /cambio de aceite/i, usd: 15 },
-        { re: /(frenos|suspensi(ó|o)n)/i, usd: 35 },
-        { re: /(alineaci(ó|o)n|balanceo)/i, usd: 18 },
-        { re: /mantenimiento preventivo/i, usd: 25 },
-        { re: /revisi(ó|o)n general/i, usd: 22 },
-      ];
-
-      function currentService() {
-        return (serviceInput?.value || '').trim();
-      }
-
-      function requiredAddress() {
-        const t = Array.from(visitTypeRadios).find(r => r.checked)?.value || 'presencial';
-        if (t === 'domicilio') {
-          return (domicileAddress?.value || '').trim();
-        }
-        return (workshopDetail?.value || '').trim();
-      }
-
-      function hasDate() {
-        return !!((scheduledFor?.value || '').trim() || (visitDateInput?.value || '').trim());
-      }
-
-      function formOK() {
-        const hasService = !!currentService();
-        const hasMechanic = !!(mechanicSelect && mechanicSelect.value);
-        const hasHour = !!(visitTimeInput && visitTimeInput.value);
-        const hasAddr = !!requiredAddress();
-        return hasService && hasMechanic && hasDate() && hasHour && hasAddr;
-      }
-
-      function priceUSD(text) {
-        if (!text) return 25;
-        for (const p of PRICE) if (p.re.test(text)) return p.usd;
-        return 25;
-      }
-
-      function fmtUSD(a) {
-        try { return new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(a); }
-        catch { return 'US$' + a; }
-      }
-
-      function updatePreview() {
-        const s = currentService();
-        const amt = priceUSD(s);
-        payServiceName.textContent = s || '—';
-        payAmountEl.textContent = fmtUSD(amt);
-        payErrorEl.style.display = formOK() ? 'none' : 'block';
-      }
-
-      ['input', 'change'].forEach(evt => {
-        serviceInput?.addEventListener(evt, updatePreview);
-        mechanicSelect?.addEventListener(evt, updatePreview);
-        visitDateInput?.addEventListener(evt, updatePreview);
-        scheduledFor?.addEventListener(evt, updatePreview);
-        visitTimeInput?.addEventListener(evt, updatePreview);
-        domicileAddress?.addEventListener(evt, updatePreview);
-        workshopDetail?.addEventListener(evt, updatePreview);
-        visitTypeRadios.forEach(r => r.addEventListener(evt, updatePreview));
-      });
-      updatePreview();
-
-      if (!window.paypal) {
-        console.error('[PayPal] SDK no cargó');
-        return;
-      }
-
-      paypal.Buttons({
-        style: { layout: 'vertical', color: 'gold', shape: 'rect', label: 'pay', tagline: false },
-
-        onClick: (data, actions) => {
-          updatePreview();
-          if (!formOK()) {
-            payErrorEl.style.display = 'block';
-            console.warn('[PayPal] Form incompleto: servicio/mech/fecha/hora/dirección');
-            return actions.reject();
-          }
-          return actions.resolve();
-        },
-
-        createOrder: (data, actions) => {
-          const svc = currentService();
-          let amt = Number(priceUSD(svc));
-          if (!Number.isFinite(amt) || amt <= 0) {
-            console.warn('[PayPal] Monto inválido, usando 25 USD como fallback');
-            amt = 25;
-          }
-          const value = amt.toFixed(2);
-          console.log('[PayPal] createOrder →', { servicio: svc, amountUSD: value });
-
-          return actions.order.create({
-            purchase_units: [{
-              amount: { value },
-              description: `Reserva de cita: ${svc || 'Servicio MechApp'}`
-            }]
-          });
-        },
-
-        /* ✅ CAMBIO MÍNIMO: capturamos en el servidor y redirigimos a confirmación */
-        onApprove: async (data, actions) => {
-          try {
-            const r = await fetch('/api/paypal/capture', {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ orderID: data.orderID })
-            });
-
-            if (!r.ok) {
-              const err = await r.json().catch(() => ({}));
-              throw new Error(err?.error || 'Fallo al confirmar el pago');
-            }
-
-            const result = await r.json(); // { orderId, status, amount, currency, payerEmail }
-
-            const qs = new URLSearchParams({
-              order: result.orderId,
-              status: result.status || '',
-              amount: result.amount || '',
-              currency: result.currency || 'USD',
-              service: document.querySelector('#service')?.value || 'Servicio MechApp'
-            });
-
-            window.location.href = `/confirmacion.html?${qs.toString()}`;
-          } catch (e) {
-            console.error(e);
-            alert('Ocurrió un problema al confirmar el pago.');
-          }
-        },
-
-
-        onError: (err) => {
-          console.error('[PayPal] ERROR →', err);
-          alert('Ocurrió un problema con PayPal. Revisa la consola para más detalle.');
-        }
-      }).render('#paypal-button-container');
-    })();
-  </script>
 
 </body>
 
