Apply unified blue palette

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -23,10 +23,10 @@
 
 <body>
   <header class="site-header">
-    <div class="brand">
+    <a class="brand" href="./paginainicio.html">
       <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
       <span class="brand-name">Mechapp</span>
-    </div>
+    </a>
     <nav class="main-nav" aria-label="Principal">
       <a href="#inicio" class="nav-link active">Inicio</a>
       <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
