--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -23,10 +23,10 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="brand">
+      <a class="brand" href="./paginainicio.html">
         <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
         <span class="brand-name">Mechapp</span>
-      </div>
+      </a>
       <nav class="main-nav" aria-label="Principal">
         <a href="./paginainicio.html" class="nav-link">Inicio</a>
         <a href="./sobre-nosotros.html" class="nav-link active">Sobre nosotros</a>
@@ -44,7 +44,7 @@
       <div class="header-actions">
         <a
           href="./login.html"
-          class="button button-secondary"
+          class="button button-primary"
           data-auth-visibility="unauthenticated"
         >
           Iniciar sesión
@@ -98,7 +98,7 @@
           <h4>¿Quieres saber más?</h4>
           <p>Escríbenos a <a href="mailto:contacto@mechapp.com">contacto@mechapp.com</a></p>
         </div>
-        <a class="button" href="./paginainicio.html#ubicacion" style="color: black;">Encuentra un taller cercano</a>
+        <a class="button button-secondary" href="./paginainicio.html#ubicacion">Encuentra un taller cercano</a>
       </div>
       <p class="footer-note">© 2024 Mechapp. Todos los derechos reservados.</p>
     </footer>
