--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -26,7 +26,7 @@
     <div class="brand">
       <img src="../assets/logo-oscuro.png" alt="Mechapp" class="brand-logo" />
       <span class="brand-name">Mechapp</span>
-    </a>
+    </div>
     <nav class="main-nav" aria-label="Principal">
       <a href="#inicio" class="nav-link active">Inicio</a>
       <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
