--- a/pages/resenas-mecanicos.html
+++ b/pages/resenas-mecanicos.html
@@ -19,10 +19,10 @@
 
   <body>
     <header class="site-header">
-      <a class="brand" href="./paginainicio.html">
+      <div class="brand">
         <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
         <span class="brand-name">Mechapp</span>
-      </a>
+      </div>
       <nav class="main-nav" aria-label="Principal">
         <a href="./paginainicio.html" class="nav-link">Inicio</a>
         <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
@@ -30,8 +30,8 @@
         <a href="./registro-taller.html" class="nav-link" data-visible-for="mecanico" hidden>Registrar Taller</a>
       </nav>
       <div class="header-actions">
-        <a href="./login.html" class="button button-primary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
-        <a href="./registro.html" class="button button-secondary">Crear Cuenta</a>
+        <a href="./login.html" class="button button-secondary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
+        <a href="./registro.html" class="button ghost">Crear Cuenta</a>
       </div>
     </header>
 
