--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -23,10 +23,10 @@
   </head>
   <body>
     <header class="site-header">
-      <a class="brand" href="./paginainicio.html">
+      <div class="brand">
         <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
         <span class="brand-name">Mechapp</span>
-      </a>
+      </div>
       <nav class="main-nav" aria-label="Principal">
         <a href="./paginainicio.html" class="nav-link">Inicio</a>
         <a href="./sobre-nosotros.html" class="nav-link active">Sobre nosotros</a>
@@ -44,7 +44,7 @@
       <div class="header-actions">
         <a
           href="./login.html"
-          class="button button-primary"
+          class="button button-secondary"
           data-auth-visibility="unauthenticated"
         >
           Iniciar sesión
