Add workshop selection for in-person visits

--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -85,6 +85,14 @@
             </div>
           </div>
 
+          <div class="field" id="workshop-select-field" hidden>
+            <label for="workshop-select">Seleccionar taller</label>
+            <select id="workshop-select" name="workshop">
+              <option value="">Selecciona un taller registrado</option>
+            </select>
+            <small id="workshop-helper">Elige un taller para ver los mecánicos disponibles.</small>
+          </div>
+
           <div class="field">
             <label for="mechanic-select">Mecánico</label>
             <select id="mechanic-select" name="mechanic" required>
