cositas del css

--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -22,7 +22,7 @@
 <body>
   <header class="site-header">
     <a class="brand" href="./paginainicio.html">
-      <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
+      <img src="../assets/logo-rojo.png" alt="Mechapp" class="brand-logo" />
       <span class="brand-name">Mechapp</span>
     </a>
     <nav class="main-nav" aria-label="Principal">
@@ -42,7 +42,7 @@
     <section class="hero" aria-labelledby="agendar-titulo">
       <span class="hero-tag">Reserva tu servicio</span>
       <h1 id="agendar-titulo">Agenda una visita con tu mecánico de confianza</h1>
-      <p>
+      <p class="parrafo">
         Coordina una cita presencial en un taller cercano o recibe atención a domicilio. Todos los mecánicos de Mechapp
         cuentan con certificaciones verificadas.
       </p>
