--- a/pages/pago-abono.html
+++ b/pages/pago-abono.html
@@ -28,7 +28,7 @@
             margin: 0;
             padding: 0;
             font-family: "Manrope", sans-serif;
-            background-color: #0f172a;
+            background: linear-gradient(100deg, #5e5e5e);
             /* <- FONDO EXACTO SIN DEGRADADO */
             color: #e5e7eb;
         }
@@ -55,6 +55,7 @@
             font-size: 1.4rem;
             font-weight: 700;
             letter-spacing: 0.5px;
+            color: black;
         }
 
         /* PILLS */
@@ -62,17 +63,17 @@
             display: inline-flex;
             padding: 6px 12px;
             border-radius: 50px;
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            color: #9ca3af;
+            border: 1px solid rgb(0, 0, 0);
+            color: #ffffff;
             font-size: 0.8rem;
             margin-left: auto;
         }
 
         /* CARD PRINCIPAL */
         .card {
-            background: rgba(255, 255, 255, 0.03);
+            background: rgba(255, 255, 255, 0.938);
             /* <- MISMA TRANSPARENCIA */
-            border: 1px solid rgba(255, 255, 255, 0.08);
+            border: 1px solid rgb(255, 255, 255);
             border-radius: 18px;
             padding: 28px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.45);
@@ -82,11 +83,12 @@
             margin: 0 0 6px;
             font-size: 1.5rem;
             font-weight: 600;
+            color: black;
         }
 
         .card p.subtitle {
             margin: 0 0 20px;
-            color: #94a3b8;
+            color: #000000;
             font-size: 0.95rem;
         }
 
@@ -99,8 +101,8 @@
         }
 
         .panel {
-            background: rgba(255, 255, 255, 0.02);
-            border: 1px solid rgba(255, 255, 255, 0.07);
+            background: rgba(0, 0, 0, 0);
+            border: 1px solid rgb(0, 0, 0);
             border-radius: 14px;
             padding: 16px 20px;
         }
@@ -108,7 +110,7 @@
         .panel h2 {
             margin: 0 0 14px;
             font-size: 0.9rem;
-            color: #94a3b8;
+            color: #000000;
             text-transform: uppercase;
             letter-spacing: 0.8px;
         }
@@ -121,14 +123,16 @@
 
         .panel table td {
             padding: 8px 0;
+            color: #000000;
         }
 
         .panel table tr+tr td {
-            border-top: 1px dashed rgba(255, 255, 255, 0.12);
+            border-top: 1px dashed rgb(0, 0, 0);
         }
 
         .text-right {
             text-align: right;
+            color: #000000;
         }
 
         .amount {
@@ -138,7 +142,7 @@
 
         /* MARCO PAYPAL */
         .paypal-box {
-            border: 1px dashed rgba(255, 255, 255, 0.20);
+            border: 1px dashed rgba(0, 0, 0, 0.945);
             background: rgba(255, 255, 255, 0.04);
             padding: 14px;
             border-radius: 12px;
@@ -147,7 +151,7 @@
 
         .paypal-box p {
             font-size: 0.8rem;
-            color: #94a3b8;
+            color: #000000;
             margin-bottom: 10px;
         }
 
@@ -165,7 +169,7 @@
     <div class="container">
         <!-- Header igual -->
         <div class="header-inline">
-            <img src="../assets/logo.png" alt="Mechapp" width="90px" height="90px">
+            <img src="../assets/logo-rojo.png" alt="Mechapp" width="90px" height="90px">
             <span>Mechapp</span>
             <div class="pill">Abono de cita</div>
         </div>
