--- a/pages/resenas-mecanicos.html
+++ b/pages/resenas-mecanicos.html
@@ -20,7 +20,7 @@
   <body>
     <header class="site-header">
       <div class="brand">
-        <img src="../assets/logo-oscuro.png" alt="Mechapp" class="brand-logo">
+        <img src="../assets/logo-rojo.png" alt="Mechapp" class="brand-logo">
         <span class="brand-name">Mechapp</span>
       </div>
       <nav class="main-nav" aria-label="Principal">
