Ajusta longitud mínima del nombre en registro

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -38,6 +38,7 @@
                             id="name"
                             name="name"
                             placeholder="Tu nombre"
+                            minlength="6"
                             autocomplete="name"
                             required
                             aria-describedby="register-name-error"
