--- a/pages/admin.html
+++ b/pages/admin.html
@@ -19,7 +19,7 @@
   <body>
     <header class="site-header admin-header" aria-label="Barra principal">
       <div class="brand admin-brand">
-        <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
+        <img src="../assets/logo-rojo.png" alt="Mechapp" class="brand-logo" />
         <div class="admin-brand__copy">
           <span class="brand-name">Mechapp</span>
           <p class="admin-brand__subtitle">Panel de administración</p>
