--- a/pages/editar-nombre.html
+++ b/pages/editar-nombre.html
@@ -21,7 +21,7 @@
         <section class="auth-card" aria-labelledby="update-name-title">
             <div class="brand" aria-label="Mechapp">
                 <a class="brand-link" href="./paginainicio.html">
-                    <img src="../assets/logo-oscuro.png" alt="Logo Mechapp" width="90" height="90">
+                    <img src="../assets/logo-rojo.png" alt="Logo Mechapp" width="90" height="90">
 
                     <span>Mechapp</span>
                 </a>
