--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -197,10 +197,14 @@
     </div>
     <div class="footer-column">
       <h4>Contacto</h4>
-      <p>+34 900 123 456</p>
-      <p>soporte@autoserv.com</p>
+      <p>+56 900 123 456</p>
+      <p>soporte@mechapp.com</p>
     </div>
   </footer>
+  <footer class="site-footer-down">
+    <p>© 2025 MechApp — Todos los derechos reservados.</p>
+</footer>
+
 
   <script src="../src/home-workshops.js" defer></script>
   <script src="../src/home-services.js" defer></script>
