--- a/pages/recuperar-contrasena.html
+++ b/pages/recuperar-contrasena.html
@@ -24,7 +24,7 @@
     <main>
       <section class="auth-card" aria-labelledby="recovery-title">
         <div class="brand" aria-label="AutoServ">
-          <img src="../assets/logo-oscuro.png" alt="Logo Mechapp" width="90" height="90">
+          <img src="../assets/logo-rojo.png" alt="Logo Mechapp" width="90" height="90">
           <span>Mechapp</span>
         </div>
 
