--- a/pages/redactar-resena.html
+++ b/pages/redactar-resena.html
@@ -20,7 +20,7 @@
   <body>
     <header class="site-header">
       <a class="brand" href="./paginainicio.html" aria-label="Volver al inicio">
-        <img src="../assets/logo.png" alt="Logo de Mechapp" />
+        <img src="../assets/logo-rojo.png" alt="Logo de Mechapp" />
         <span>Mechapp</span>
       </a>
       <nav class="header-actions" aria-label="Acciones">
