--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
         <section class="auth-card" aria-labelledby="login-title">
             <div class="brand" aria-label="AutoServ">
                 <a class="brand-link" href="./paginainicio.html">
-                    <img src="../assets/logo-oscuro.png" alt="Logo Mechapp" width="90" height="90">
+                    <img src="../assets/logo-rojo.png" alt="Logo Mechapp" width="90" height="90">
                     <span>Mechapp</span>
                 </a>
                 <a class="back-home" href="./paginainicio.html">Volver al inicio</a>
