Improve password rule feedback

--- a/pages/cambiar-contrasena.html
+++ b/pages/cambiar-contrasena.html
@@ -57,9 +57,9 @@
                             <span class="password-toggle-icon" aria-hidden="true"></span>
                         </button>
                     </div>
-                    <ul class="password-rules">
-                        <li>Al menos 8 caracteres.</li>
-                        <li>Combina letras, números y símbolos para mayor seguridad.</li>
+                    <ul class="password-rules" aria-live="polite">
+                        <li data-password-rule="length">Al menos 8 caracteres.</li>
+                        <li data-password-rule="complexity">Combina letras, números y símbolos para mayor seguridad.</li>
                     </ul>
                 </div>
 
