Show remaining appointment slots on booking calendar

--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -118,6 +118,7 @@
             <div class="calendar" id="visit-calendar" aria-live="polite"></div>
             <input type="hidden" id="visit-date" name="visit-date" />
             <p class="field-helper" id="calendar-helper">Selecciona un mecánico para ver la disponibilidad.</p>
+            <p class="field-helper availability-info" id="calendar-availability" aria-live="polite" hidden></p>
           </div>
 
           <input type="hidden" id="scheduled-for" name="scheduled-for" />
